# Copyright (c) 2006 Software Laboratory, SAMSUNG Electronics, Inc.
# All rights reserved.
#
# Orignal by Jin-mook Lim <jinmook.lim@samsung.com>
#            Bum-seok Lee <bumseok.lee@samsung.com>
# Created by Jaekyun Lee <jkyun.lee@samsung.com>
# Modified by Heechul jeon <heechul.jeon@samsung.com>

SUBDIRS =

if GST_EXT_USE_EXT_IMAGEREADER
SUBDIRS += imagereader
endif

if GST_EXT_USE_EXT_PIP
SUBDIRS += pip
endif

if GST_EXT_USE_EXT_VIDEOMUTE
SUBDIRS += videomute
endif

if GST_EXT_USE_EXT_ECOREBUFFERSINK
SUBDIRS += ecorebuffersink
endif

if GST_EXT_USE_EXT_EVASIMAGESINK
SUBDIRS += evasimagesink
endif

if GST_EXT_USE_EXT_VOICEDATASRCBIN
SUBDIRS += voicedatasrcbin
SUBDIRS += splitter
SUBDIRS += socketsrc
endif

if GST_EXT_USE_EXT_MULTISESSION_HTTPSRC
SUBDIRS += mshttpsrc
endif

if GST_EXT_USE_EXT_WFDRTSPSRC
SUBDIRS += wfdrtspsrc
endif

if GST_EXT_USE_EXT_EVASTEXTOVERLAY
SUBDIRS += evastextoverlay
endif

if GST_EXT_USE_EXT_CAIROTEXT
SUBDIRS += cairotext
endif

if GST_EXT_USE_EXT_VIDEOEFX
SUBDIRS += videoefx
endif

if GST_EXT_USE_EXT_SUBRENDER
SUBDIRS += subrender
endif

if GST_EXT_USE_EXT_SUBMUX
SUBDIRS += submux
endif
