IF (ENABLE_WEBKIT2 AND ENABLE_TIZEN_WEBKIT2_EFL_WTR)
    ADD_SUBDIRECTORY(WebKitTestRunner)
ENDIF ()

IF ("${PORT}" STREQUAL "Efl")
    ADD_SUBDIRECTORY(EWebLauncher/ControlTheme)

    IF (ENABLE_WEBKIT)
        ADD_SUBDIRECTORY(DumpRenderTree/efl)
        ADD_SUBDIRECTORY(EWebLauncher)
    ENDIF ()

    IF (ENABLE_WEBKIT2)
        ADD_SUBDIRECTORY(MiniBrowser/efl)
    ENDIF ()

    IF (TIZEN_WEBKIT_EFL_DRT OR ENABLE_TIZEN_WEBKIT2_EFL_WTR)
        ADD_SUBDIRECTORY(DumpRenderTree/TestNetscapePlugIn)
    ENDIF ()
ELSEIF ("${PORT}" STREQUAL "WinCE")
    ADD_SUBDIRECTORY(WinCELauncher)
ENDIF()

IF (ENABLE_WEBKIT2 AND ENABLE_API_TESTS)
# UPVERSION
#    ADD_SUBDIRECTORY(TestWebKitAPI)
ENDIF()
