# Copyright (c) 2006 Software Laboratory, SAMSUNG Electronics, Inc.
# All rights reserved.
#
# Orignal by Jin-mook Lim <jinmook.lim@samsung.com>
#            Bum-seok Lee <bumseok.lee@samsung.com>
# Created by Jaekyun Lee <jkyun.lee@samsung.com>
# Midefied by Jeechul jeon <heechul.jeon@samsung.com>

SUBDIRS = src
